--- a/portalrbo/assets/css/main.css
+++ b/portalrbo/assets/css/main.css
@@ -1490,8 +1490,8 @@ section,
 
 .portfolio .portfolio-content {
   background-color: var(--surface-color);
-  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
-  height: 100%;
+  box-shadow: 0px 10px 30px rgba(1, 25, 131, 0.1);
+  height: 50%;
   overflow: hidden;
 }
 
@@ -1510,9 +1510,9 @@ section,
 }
 
 .portfolio .portfolio-content .portfolio-info h4 {
-  font-size: 18px;
-  font-weight: 600;
-  padding-right: 50px;
+  font-size: 14px;
+  font-weight: 500;
+  padding-right: 100px;
 }
 
 .portfolio .portfolio-content .portfolio-info h4 a {
@@ -1526,8 +1526,8 @@ section,
 
 .portfolio .portfolio-content .portfolio-info p {
   color: color-mix(in srgb, var(--default-color), transparent 30%);
-  font-size: 14px;
-  margin-bottom: 0;
+  font-size: 13px;
+  margin-bottom: 10;
   padding-right: 50px;
 }
 
@@ -2847,4 +2847,16 @@ section,
   padding-left: 5px;
   color: color-mix(in srgb, var(--default-color), transparent 60%);
   font-size: 14px;
+}
+
+
+
+
+
+
+.portfolio-content {
+  min-height: 200px; /* Defina a altura mínima */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
